styles working enough for demo/screenshots

--- a/ui/styles.css
+++ b/ui/styles.css
@@ -213,6 +213,11 @@ img {
   overflow-y: auto;
 }
 
-.button {
-  color: #05728f;
+.my-btn {
+  background-color: #05728f;
 }
+
+.btn-cancel {
+  float: left;
+}
+
