using this for usability study

--- a/thresholdchat/tcserver/templates/tcserver/index.html
+++ b/thresholdchat/tcserver/templates/tcserver/index.html
@@ -32,7 +32,7 @@
 
             <!-- Request access button -->
             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#requestAccessModal">
-              Get Access
+              Access History
             </button>
             <!-- Request access modal -->
             <div class="modal fade" id="requestAccessModal" tabindex="-1" role="dialog" aria-labelledby="requestAccessModalTitle" aria-hidden="true">
@@ -223,6 +223,7 @@
                 </div>
               </div>
 
+ <!--
               <div class="chat_list">
                 <div class="chat_people">
                   <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="profile-pic"> </div>
@@ -242,9 +243,10 @@
                   </div>
                 </div>
               </div>
-
+-->
             </div>
           </div>
+
 
           <!-- Current chat window, right column -->
           <div class="mesgs">
