--- a/thresholdchat/tcserver/templates/tcserver/index.html
+++ b/thresholdchat/tcserver/templates/tcserver/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
-  <title>Message Chat Box - Bootsnipp.com</title>
+  <title>ChatSafe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   {% load static %}
